Storefront: Fix FRO-126.

--- a/apps/storefront/src/scss/app.scss
+++ b/apps/storefront/src/scss/app.scss
@@ -176,7 +176,7 @@ input[type='search']:is(
         top: 0;
         left: 0;
         width: 100%;
-        height: var(--block-spacer) !important;
+        height: var(--block-spacer-huge) !important;
     }
 }
 
