--- a/apps/storefront/src/components/Footer/footer.module.scss
+++ b/apps/storefront/src/components/Footer/footer.module.scss
@@ -24,7 +24,7 @@
             grid-template-columns: 1fr;
             gap: 1rem;
             justify-content: space-between;
-            align-items: center;
+            align-items: start;
             text-align: left;
             width: 100%;
             height: 100%;
@@ -37,7 +37,7 @@
             .block {
                 display: flex;
                 grid-auto-rows: auto;
-                align-items: center;
+                align-items: start;
                 justify-content: flex-end;
                 flex-direction: column;
                 flex-grow: 1;
@@ -65,7 +65,7 @@
                     min-width: 15rem;
 
                     object-fit: contain;
-                    object-position: center;
+                    object-position: left;
 
                     filter: grayscale(100%) brightness(0) invert(1);
 
@@ -98,7 +98,7 @@
                 height: 100%;
                 width: 100%;
                 object-fit: contain;
-                object-position: center;
+                object-position: start;
             }
         }
 
@@ -127,11 +127,11 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    align-items: center;
+    align-items: start;
     gap: var(--block-spacer-small);
 
     &:nth-child(2) {
-        align-items: center;
+        align-items: start;
         gap: var(--block-spacer-small);
 
         @media (min-width: $breakpoint-mobile) {
@@ -192,13 +192,16 @@
         display: flex;
         align-items: center;
         justify-self: flex-end;
-        margin: var(--block-spacer) 0;
+        flex-wrap: wrap;
+
+        a {
+            white-space: nowrap;
+        }
 
         @media (min-width: $breakpoint-mobile) {
             align-items: flex-end;
 
             height: 2rem;
-            margin: 0;
         }
 
         .policy {
