--- a/apps/storefront/src/components/products/quantity-selector.module.scss
+++ b/apps/storefront/src/components/products/quantity-selector.module.scss
@@ -5,7 +5,7 @@
     overflow: clip;
     display: flex;
     justify-content: flex-start;
-    align-items: flex-start;
+    align-items: center;
 
     height: 100%;
 
