--- a/apps/storefront/src/scss/app.scss
+++ b/apps/storefront/src/scss/app.scss
@@ -156,12 +156,11 @@ input[type='number'] {
     min-width: 0;
 }
 
-input[type='search']:is(
-        ::-webkit-search-decoration,
-        ::-webkit-search-cancel-button,
-        ::-webkit-search-results-button,
-        ::-webkit-search-results-decoration
-    ) {
+input[type='search']::-webkit-search-decoration,
+input[type='search']::-webkit-search-cancel-button,
+input[type='search']::-webkit-search-results-button,
+input[type='search']::-webkit-search-results-decoration {
+    display: none;
     -webkit-appearance: none;
     appearance: none;
 }
