--- a/apps/admin/src/scss/global.css
+++ b/apps/admin/src/scss/global.css
@@ -1,7 +1,25 @@
 @tailwind base;
 @layer base {
+    :root {
+        --fallback-font: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Ubuntu, Cantarell,
+            'Helvetica Neue', sans-serif;
+    }
+
     html {
         @apply font-sans;
+    }
+
+    #nprogress {
+        pointer-events: none;
+    }
+    #nprogress .bar {
+        background: var(--accent-primary-light);
+        position: fixed;
+        z-index: 1000;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: var(--block-spacer) !important;
     }
 }
 @tailwind components;
