--- a/apps/admin/src/app/globals.css
+++ b/apps/admin/src/app/globals.css
@@ -49,6 +49,10 @@
             'calt' 1;
     }
 
+    body {
+        @apply min-h-screen;
+    }
+
     #nprogress {
         pointer-events: none;
     }
