--- a/apps/admin/src/app/globals.css
+++ b/apps/admin/src/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
     :root {
-        --fallback-font: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Ubuntu, Cantarell,
+        --font-fallback: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Ubuntu, Cantarell,
             'Helvetica Neue', sans-serif;
 
         --background: 240 10% 3.9%;
