--- a/apps/storefront/src/scss/app.scss
+++ b/apps/storefront/src/scss/app.scss
@@ -1,7 +1,7 @@
 @import 'globals';
 
 :root {
-    --fallback-font: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Ubuntu, Cantarell,
+    --font-fallback: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Ubuntu, Cantarell,
         'Helvetica Neue', sans-serif;
 
     --color-bright: #ffffff;
@@ -39,9 +39,6 @@
 }
 
 html {
-    font-family: var(--font-primary, var(--fallback-font));
-    font-size: 16px;
-
     &:root {
         --accent-primary-text: var(--color-accent-primary-text, var(--color-bright));
         --accent-secondary-text: var(--color-accent-secondary-text, var(--color-dark));
