Storefront: Fix discounts.

--- a/apps/storefront/src/components/products/recommended-products.module.scss
+++ b/apps/storefront/src/components/products/recommended-products.module.scss
@@ -2,6 +2,6 @@
 
 .container {
     .card {
-        min-width: var(--component-product-card-width);
+        //min-width: var(--component-product-card-width);
     }
 }
