--- a/apps/storefront/src/scss/_animations.scss
+++ b/apps/storefront/src/scss/_animations.scss
@@ -1,9 +1,6 @@
 @keyframes shimmer {
-    from {
-        background-position: 200% 0;
-    }
-    to {
-        background-position: -200% 0;
+    100% {
+        transform: translateX(100%);
     }
 }
 
