--- a/apps/landing/src/components/footer.module.scss
+++ b/apps/landing/src/components/footer.module.scss
@@ -17,17 +17,15 @@
     max-width: 100%;
 }
 
+.content {
+    max-width: var(--layout-page-width);
+}
+
 .container {
     background: var(--color-accent-primary);
     color: var(--color-foreground);
 
     .content {
-        width: calc(var(--layout-page-width) + var(--layout-page-spacing) * 2);
-        max-width: 100%;
-        padding: var(--layout-section-padding) var(--layout-page-spacing);
-
-        font-size: 1em;
-
         .section {
             a {
                 &:is(:hover) {
@@ -72,12 +70,7 @@
     color: var(--color-foreground);
 
     .content {
-        width: calc(100vw - calc(var(--layout-page-spacing) * 2));
-        max-width: var(--layout-page-width);
         margin: 0 var(--layout-page-spacing);
-        padding: var(--layout-section-padding) 0;
-
-        font-weight: 600;
 
         .links {
             display: flex;
@@ -87,16 +80,11 @@
         }
 
         &.beside {
-            font-size: 1em;
-
             @media (max-width: $breakpoint-mobile) {
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
-                align-items: center;
-
-                font-size: 0.85em;
-                font-weight: 600;
+                align-items: start;
             }
         }
     }
@@ -110,12 +98,6 @@
     align-items: center;
     justify-content: center;
     gap: calc(var(--layout-page-spacing) / 2);
-
-    font-size: 0.9em;
-
-    @media (min-width: $breakpoint-mobile) {
-        font-size: 1em;
-    }
 
     .section {
         &:is(:last-child) {
@@ -139,5 +121,6 @@
 }
 
 .status-iframe {
-    margin-left: -8px;
+    margin-left: -4px;
+    margin-bottom: -3px;
 }
