Storefront: Drastically improve geo-redirect design.

--- a/apps/storefront/src/scss/app.scss
+++ b/apps/storefront/src/scss/app.scss
@@ -1,4 +1,5 @@
 @import 'globals';
+@import 'the-new-css-reset';
 
 :root {
     --font-fallback: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Ubuntu, Cantarell,
