--- a/apps/landing/src/components/footer.module.scss
+++ b/apps/landing/src/components/footer.module.scss
@@ -22,14 +22,14 @@
 }
 
 .container {
-    background: var(--color-accent-primary);
-    color: var(--color-foreground);
+    background: hsl(var(--color-accent-primary));
+    color: hsl(var(--color-foreground));
 
     .content {
         .section {
             a {
                 &:is(:hover) {
-                    color: var(--color-background);
+                    color: hsl(var(--color-background));
                 }
             }
         }
@@ -51,7 +51,7 @@
                 gap: calc(var(--layout-block-padding) / 2);
 
                 .message {
-                    color: var(--color-foreground);
+                    color: hsl(var(--color-foreground));
                 }
 
                 a,
@@ -66,8 +66,8 @@
 }
 
 .copyrights {
-    background: var(--color-background);
-    color: var(--color-foreground);
+    background: hsl(var(--color-background));
+    color: hsl(var(--color-foreground));
 
     .content {
         margin: 0 var(--layout-page-spacing);
